--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="project-info">
             <h1>Project 4</h1>
             <h2>Gym Website</h2>
-            <p>Here, I have designed the gym website from scratch and then imported it to wordpress and add a few plugins 
+            <p>Here, I have designed the gym website from scratch and then imported it to wordpress and added a few plugins 
             </p>
           </div>
           <div class="project-img">
